--- a/intro.css
+++ b/intro.css
@@ -162,6 +162,17 @@ p {
 
 }
 
+.catbox {
+
+  background-size:contain;
+  background-repeat: no-repeat;
+  background-image: url("catbox.svg");
+  width: 100%;
+  height: 400px;
+  margin-top: 50px;
+
+}
+
 
 .button:hover {
   background-color: #0A203B;
